--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,18 +6,57 @@ body {
     justify-content: center;
     align-items: center;
     background-color: rgb(16, 27, 88);
-    font-family: sans-serif;
     padding: 0%;
     margin: 0%;
-  }
+}
 
-  /* calculator */
+
 .calculator {
     width: 300px;
     padding-bottom: 15px;
     border-radius: 7px;
     background-color: rgb(255, 0, 0);
     box-shadow: 5px 8px 8px  rgba(214, 31, 31, 0.61);
-  }
-  /* calculator style end */
+}
+
+.display {
+    width: 100%;
+    height: 80px;
+    border: none;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 2rem;
+    background-color: #ce9e00;
+    color: #000;
+    text-align: right;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+}
+  
+
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+
+  button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    font-size: 1.5rem;
+    background-color: #222;
+    color: #fff;
+    margin: 10px;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.operator {
+    background-color: #00ff44;
+    color: #000;
+}
 
