--- a/src/scss/modules/_section.scss
+++ b/src/scss/modules/_section.scss
@@ -1,4 +1,61 @@
+body {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0);
+    padding: 0%;
+    margin: 0%;
+}
 
- 
- 
-  
+
+.calculator {
+    width: 300px;
+    padding-bottom: 15px;
+    border-radius: 7px;
+    background-color: rgba(99, 247, 0, 0.486);
+    box-shadow: 5px 8px 8px  #00ff4cc9;
+}
+
+.display {
+    width: 100%;
+    height: 80px;
+    border: none;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 2rem;
+    background-color: #00ff4cc9;
+    color: rgb(0, 0, 0);
+    text-align: right;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+}
+
+
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+
+button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    font-size: 30px;
+    background-color: rgb(51, 255, 0);
+    color: rgb(0, 0, 0);
+    margin: 10px;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.operator {
+    background-color: #006eff;
+    color: rgb(255, 255, 255);
+}
